# mag

./: .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  AUTOMEM_RESEARCH.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.lock.bak  Cargo.toml  Cargo.toml.bak  ISSUE_TRACKER.md  LICENSE  README.md  SECURITY.md  context7.json  install.sh  mag-offer.md  mag-research.md  prek.toml  replace.py  replace_logic.patch
.claude/: settings.local.json
.claude/skills/release/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benches/: longmemeval.rs  onnx_profile.rs  python_comparison.py  python_comparison_nocache.py  scale_bench.rs
benches/bench_utils/: formatting.rs  metrics.rs  mod.rs  openai_types.rs  stats.rs  timing_embedder.rs
benches/locomo/: dataset.rs  display.rs  llm.rs  main.rs  openai_embedder.rs  scoring.rs  seeding.rs  strategies.rs  types.rs  voyage_embedder.rs
benches/longmemeval/: 2026-03-10-multi-session-investigation.md  display.rs  grid_search.rs  helpers.rs  judge.rs  local.rs  main.rs  official.rs  types.rs
benchmarks/: LATEST.md
conductor/: AGENTS.md  campaign-audit-remediation.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  wave4-atic-issues.md  workflow.md
conductor/archive/arch_design_20260217/: plan.md  spec.md
conductor/code_styleguides/: rust.md
conductor/tracks/arch_design_20260217/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/sqlite_storage_20260218/: index.md  metadata.json  plan.md  spec.md
connectors/gemini/: AGENTS.md
connectors/opencode/skills/memory-checkpoint/: SKILL.md
connectors/opencode/skills/memory-health/: SKILL.md
connectors/opencode/skills/memory-recall/: SKILL.md
connectors/opencode/skills/memory-store/: SKILL.md
connectors/shared/: AGENTS.md
data/: local_benchmark.json
docs/: RELEASING.md  SETUP.md  abstention.md  architecture.md  benchmark_log.csv  benchmarks.md  cli-reference.md  configuration.md  index.md  locomo_gap_analysis.md  mcp-tools.md  shared-socket.md  what-to-store.md
docs/automem/: README.md  embedding-consolidation.md  enrichment-graph.md  gap-analysis.md  locomo-benchmark.md  search-recall.md
docs/benchmarks/: LATEST.md  abstention.md  baselines.json  benchmark_log.csv  locomo_gap_analysis.md  methodology.md  models.md
docs/setup/: claude-code.md  claude-desktop.md  cline.md  codex.md  cursor.md  windsurf.md
docs/specs/: benchmark-harness.md  execution-roadmap.md  module-decomposition.md  testing-skill.md  trait-surface.md
docs/strongholds/: compact-patterns-survey.md  connector-wave-dg-r1.md  connector-wave-plan.md  forge-pr-status.md  improvement-plan-dg-r1.md  improvement-plan-dg-r2.md  improvement-plan-revision-log.md  jsonl-telemetry-campaign.md  mag-improvement-plan.md  palantir-r1-attack.md  palantir-r1-defense.md  palantir-r2-attack.md  palantir-r2-defense.md  palantir-r3-final-defense.md  palantir-r3-final.md  recon-dead-code.md  recon-source-tree.md  recon-test-infra.md  siege-pr232.md  siege-pr233.md  siege-pr237.md  siege-pr239.md  siege-pr240.md  siege-pr241.md  siege-pr248.md  siege-pr249.md  siege-pr254.md  substrate-campaign.md  tech-debt-recon.md  test-harness-blueprint.md  wave1-implementation-blueprint.md  wave2-review-comments.md
npm/: README.md  install.js  package.json  package.json.bak
parity/: README.md  run_parity.sh
plugin/: .mcp.json  CLAUDE.md
plugin/.claude-plugin/: plugin.json
plugin/dev/: mcp.json  run-tests.sh  setup.sh  test-env.sh
plugin/dev/.claude-plugin/: plugin.json
plugin/dev/hooks/: hooks.json
plugin/dev/scripts/: commit-capture.sh  compact-refresh.sh  error-capture.sh  pre-compact.sh  prompt-gate.sh  session-end.sh  session-start.sh  subagent-end.sh
plugin/dev/skills/: mag-dev-status.md
plugin/hooks/: hooks.json
plugin/scripts/: commit-capture.sh  compact-refresh.sh  error-capture.sh  pre-compact.sh  prompt-gate.sh  session-end.sh  session-start.sh  subagent-end.sh
plugin/skills/memory-checkpoint/: SKILL.md
plugin/skills/memory-health/: SKILL.md
plugin/skills/memory-recall/: SKILL.md
plugin/skills/memory-store/: SKILL.md
python/: README.md  pyproject.toml  pyproject.toml.bak
python/mag_memory/: __init__.py  _download.py
scripts/: bench.sh  bump-version.sh  check-readme.sh  compare_strategies.py  pr-benchmark-gate.sh  smoke-test.sh
src/: AGENTS.md  app_paths.rs  auth.rs  benchmarking.rs  cli.rs  config_writer.rs  daemon.rs  hook_client.rs  hook_handlers.rs  http_server.rs  idle_timer.rs  lib.rs  main.rs  mcp_server.rs  setup.rs  test_helpers.rs  tool_detection.rs  uninstall.rs
src/mcp/: mod.rs  request_types.rs  validation.rs
src/mcp/tools/: facades.rs  lifecycle.rs  mod.rs  relations.rs  search.rs  session.rs  storage.rs
src/memory_core/: AGENTS.md  domain.rs  embedder.rs  entity.rs  mod.rs  reranker.rs  retrieval_strategy.rs  scoring.rs  scoring_strategy.rs  traits.rs
src/memory_core/storage/: mod.rs  sqlite.rs
src/memory_core/storage/memory/: mod.rs
src/memory_core/storage/sqlite/: admin.rs  advanced.rs  cache.rs  candidate_scorer.rs  conn_pool.rs  crud.rs  embedding_codec.rs  entities.rs  graph.rs  helpers.rs  hot_cache.rs  hot_cache_mgmt.rs  io.rs  lifecycle.rs  mod.rs  nlp.rs  query_classifier.rs  relationships.rs  schema.rs  search.rs  session.rs  storage.rs  temporal.rs  tests.rs
src/memory_core/storage/sqlite/admin/: backup.rs  maintenance.rs  mod.rs  stats.rs  welcome.rs
src/memory_core/storage/sqlite/pipeline/: abstention.rs  decomp.rs  enrichment.rs  fusion.rs  mod.rs  rerank.rs  retrieval.rs  scoring.rs
tests/: cli_output_smoke.rs  longmemeval_regression.rs  mcp_smoke.rs  migration.rs  parity_harness.rs  schema_migration.rs  storage_conformance.rs  stress.rs
tests/fixtures/: v0_1_4_schema.sql
tests/hooks/: KNOWN_GAPS.md  run_all.sh  t01_session_start.sh  t02_session_end.sh  t03_commit_capture.sh  t04_error_capture.sh  t05_prompt_gate.sh  t06_subagent_stop.sh
tests/hooks/helpers/: common.sh  plugin-install.sh
