[package]
name = "romega-memory"
version = "0.1.0"
edition = "2024"
autobenches = false

[features]
default = ["real-embeddings"]
real-embeddings = ["dep:ort", "dep:tokenizers", "dep:ndarray", "dep:reqwest"]

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
clap = { version = "4.5.59", features = ["derive"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.15", features = ["v4", "serde"] }
sha2 = "0.10.9"
schemars = "1.2.1"
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rmcp = { version = "0.16.0", features = ["server", "client", "transport-io", "transport-child-process", "macros"] }
ort = { version = "=2.0.0-rc.11", optional = true }
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["onig"] }
ndarray = { version = "0.16", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls"] }

[[bin]]
name = "longmemeval_bench"
path = "benches/longmemeval.rs"
required-features = ["real-embeddings"]
