[package]
name = "mag-memory"
version = "0.1.2"
edition = "2024"
autobenches = false
license = "MIT"
description = "MAG — Local MCP memory server with ONNX embeddings and semantic search"
repository = "https://github.com/George-RD/mag"
homepage = "https://github.com/George-RD/mag"
readme = "README.md"
keywords = ["mcp", "memory", "ai", "embeddings", "semantic-search"]
categories = ["command-line-utilities", "database"]
exclude = [".claude/", ".github/", "benches/", "conductor/", "data/", "docs/", "npm/", "python/", "scripts/", "tests/", "install.sh"]
default-run = "mag"

[lib]
name = "mag"
doctest = false

[features]
default = ["real-embeddings"]
real-embeddings = ["dep:ort", "dep:tokenizers", "dep:ndarray", "dep:dotenvy"]
mimalloc = ["dep:mimalloc"]
sqlite-vec = ["dep:sqlite-vec"]

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
axum = "0.8"
clap = { version = "4.5.59", features = ["derive", "env"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = "0.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.15", features = ["v4", "serde"] }
sha2 = "0.10.9"
schemars = "1.2.1"
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rmcp = { version = "0.16.0", features = ["server", "client", "transport-io", "transport-child-process", "transport-streamable-http-server", "macros"] }
ort = { version = "=2.0.0-rc.11", optional = true }
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["onig"] }
ndarray = { version = "0.16", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
dotenvy = { version = "0.15", optional = true }
num_cpus = "1.16"
rand = "0.8"
regex = "1"
lru = "0.12"
mimalloc = { version = "0.1", optional = true }
sqlite-vec = { version = "0.1.6", optional = true }

[lints.rust]
unused_must_use = "deny"
unreachable_patterns = "deny"
unused_imports = "deny"
unused_variables = "deny"
dead_code = "warn"              # warn not deny — parallel agents may create functions before callers exist

[lints.clippy]
all = { level = "deny", priority = -1 }
# Numeric safety for embeddings/scoring paths
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
cast_precision_loss = "deny"

[[bin]]
name = "mag"
path = "src/main.rs"

[[bin]]
name = "longmemeval_bench"
path = "benches/longmemeval/main.rs"
required-features = ["real-embeddings"]

[[bin]]
name = "onnx_profile"
path = "benches/onnx_profile.rs"
required-features = ["real-embeddings"]

[[bin]]
name = "scale_bench"
path = "benches/scale_bench.rs"
required-features = ["real-embeddings"]

[[bin]]
name = "locomo_bench"
path = "benches/locomo/main.rs"
required-features = ["real-embeddings"]
