[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mag-memory"
version = "0.1.9-dev"
description = "PyPI wrapper for the mag MCP memory server (Rust binary)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "George-RD" }]
keywords = ["mcp", "memory", "ai", "llm", "semantic-search", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/George-RD/mag"
Repository = "https://github.com/George-RD/mag"
Issues = "https://github.com/George-RD/mag/issues"

[project.scripts]
mag = "mag_memory:main"

[tool.hatch.build.targets.wheel]
packages = ["mag_memory"]
